minor font tweaks for mobile, added overflow hidden on main to prevent vertical scroll

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -63,6 +63,7 @@ form label {
 main {
     height: 100vh;
     height: 100svh;
+    overflow: hidden;
 }
 
 section {
