--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -56,13 +56,13 @@
 /* Landscape phones and down */
 @media (max-width: 480px) {
   //main
-  h1 {font-size: 3.5rem;}
-  h2 {font-size: 2.7rem;}
+  h1 {font-size: 3.3rem;}
+  h2 {font-size: 2.3rem;}
   label {font-size: 1.3rem;}
   .wrapper {width: 90%;}
   section {height:100%}
   form {
-    bottom: 30vh;
+    bottom: 20vh;
     label {width: 40%;}
   }
   //rainbow
